# ExampleAPI

./: README.md  docker-compose.yml  pyproject.toml
conf/: .env.example  conf.py  logging.conf.yml
conf/nginx/: default.conf.template
docker/: Dockerfile
nginx/: Dockerfile  nginx.conf
webapp/: logger.py  main.py
webapp/api/base/: __init__.py  health.py  router.py
webapp/integrations/metrics/: metrics.py
webapp/integrations/middleware/: middleware.py
